# game-engine

./: CMakeLists.txt  README.md
editor/: CMakeLists.txt  emulatorGui.h  fileHexEditorGui.h  gui.h  imageGui.h  main.cpp  util.h
examples/basic/: CMakeLists.txt  main.cpp
examples/basic/shaders/: SimpleShader.vertex.glsl  fragment.glsl  vertex.glsl
inc/: 3dmath.h  init.h  ogl.h  texture.h  util.h
src/: 3dmath.cpp  CMakeLists.txt  init.cpp  ogl.cpp  util.cpp
